blog/infra/k8s/posts.yaml
apiVersion: v1
# apiVersion sẽ khai báo cho kubernetes xem chúng ta muốn dùng Object nào (Pod,Service,)
kind: Pod
metadata:
  name: posts
spec:
  containers:
    - name: posts
      image: hieple/posts
