blog/infra/k8s/client.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
#  Spec là thứ chỉ định chính xác Object sẽ hoạt động như thế nào.
spec:
  #  Replicas là thứ chỉ định số lượng pod được tạo ra để chạy 1 image cụ thể
  #  Deploymet cần thông tin của những pơd mà nó sẽ quản lý
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: hieple/client-posts
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
