blog/infra/k8s/event-bus.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
#  Spec là thứ chỉ định chính xác Object sẽ hoạt động như thế nào.
spec:
  #  Replicas là thứ chỉ định số lượng pod được tạo ra để chạy 1 image cụ thể
  #  Deploymet cần thông tin của những pơd mà nó sẽ quản lý
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: hieple/event-bus
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-service
spec:
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 8080
      targetPort: 8080
