blog/infra/k8s/ingress.service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: posts.com
    - http:
        paths:
          - path: /posts
          - backend:
              serviceName: posts-cluster-ip-services
              servicePort: 4001
# kubectl apply -f ingress.service.yaml
